better spacing, fix table

--- a/src/css/standard.css
+++ b/src/css/standard.css
@@ -290,6 +290,8 @@ p {
     padding: 1em;
     background-color: lightgray;
     border-radius: 5px;
+    padding-top: 1.5rem !important;
+    padding-bottom: 1.5rem !important;
 }
 
 #dvHeader {
